Weather provider integrated (#24)
* kasse gui-functions proto
